.env and error handling files

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,15 @@ VITE_API_RETRY_ATTEMPTS=3
 # Delay between retries in milliseconds (default: 1000)
 VITE_API_RETRY_DELAY=1000
 
+# Toast Notifications
+# Toast notification duration in milliseconds (default: 3000)
+VITE_TOAST_DURATION=3000
+
+# Toast position on screen
+# Options: top-left, top-right, top-center, bottom-left, bottom-right, bottom-center
+# Default: top-right
+VITE_TOAST_POSITION=top-right
+
 # Feature Flags
 # Enable debug logging in development (default: false)
 VITE_ENABLE_DEBUG=false
